Actually do need CSS width/height on images to avoid jumping

--- a/src/assets/sass/modules/_embedded-content.scss
+++ b/src/assets/sass/modules/_embedded-content.scss
@@ -116,4 +116,9 @@ svg:not(:root) {
     &:focus {
         outline: 0;
     }
+
+    img {
+        width: 120px;
+        height: 120px;
+    }
 }
